--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@ this is my first html page
 
 <body>
     <h1>Hello World</h1>
+<p>Hi Vivek I have made some changes in your file. Please have a look.</p>
+<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione expedita, qui dicta in hic deleniti doloremque, nemo excepturi enim eos sit rem at eaque quasi aspernatur voluptates, commodi ipsam mollitia!</p>
 </body>
 </html>
